# vae_simple

./: .coveragerc  .gitignore  .mypy.ini  .pylintrc  CHANGELOG.md  LICENSE.md  MANIFEST.in  README.md  cookiecutter-replay.json  environment.yml  noxfile.py  pytest.ini  requirements-dev.txt  setup.cfg
scripts/: generate_pip_deps_from_conda.py
src/vae_simple/: __init__.py  train_vae.py  version.py
src/vae_simple/models/: __init__.py  cond_vae.py  vae.py
